--- a/kadai1/text.html
+++ b/kadai1/text.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
- <title>サンプル</title>
- <meta charset="UTF-8">
- <link rel="stylesheet" href="./stylesheet.css"/>
-</head>
-<body>
-  <h1 style="font-size:10px background-color: #A4C6FF; text-align: center; border:solid 1px #444444;">
-山田　太郎</h1>
-  <ul style= background-color: #FFCCCC;
- list-style: none; float:left; width:160px
-     border:solid 1px #444444; margin: 20px;>
-  <li>A</li>
-  <li>B</li>
-  <li>C</li>
-      <li>D</li>
-      <li>E</li>
-  </ul>
-  <div style="display:flex;
-    justify-content: space-between;
-    width:200px;
-　background-color:#0000FF;
-    height:200px; 
-　width: calc(100% / 3 - 30px);
-    border:solid 1px #444444;">
-  <p></p>
-　　<p></p>
-　　<p></p>
-　　<p></p>
-　　<p></p>
-　　<p></p>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>sample</title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <div class=header>
+      <p>山田太郎<p>
+    </div>
+    <div class="content">
+      <div class="sidebar">
+       <p class="side">サイドバーA</p>
+       <p class="side">サイドバーB</p>
+       <p class="side">サイドバーC</p>
+       <p class="side">サイドバーD</p>
+       <p class="side">サイドバーE</p>
+      </div>
+      <div class="main">
+        <div class="box">縦横:200px x 200px</div>
+        <div class="box">縦横:200px x 200px</div>
+        <div class="box">縦横:200px x 200px</div>
+        <div class="box-bottom">縦横:200px x 200px</div>
+        <div class="box-bottom">縦横:200px x 200px</div>
+        <div class="box-bottom">縦横:200px x 200px</div>     
+        </div>
+    </div>
+  </body>
 </html>
+
+
+
