山田太郎を鈴木一郎に変更

--- a/kadai1/text.html
+++ b/kadai1/text.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class=header>
-      <p>山田太郎<p>
+      <p>鈴木一郎<p>
     </div>
     <div class="content">
       <div class="sidebar">
