--- a/kadai1/text.html
+++ b/kadai1/text.html
@@ -6,26 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div class=header>
-      <p>山田太郎<p>
-    </div>
-    <div class="content">
-      <div class="sidebar">
-       <p class="side">サイドバーA</p>
-       <p class="side">サイドバーB</p>
-       <p class="side">サイドバーC</p>
-       <p class="side">サイドバーD</p>
-       <p class="side">サイドバーE</p>
-      </div>
-      <div class="main">
-        <div class="box">縦横:200px x 200px</div>
-        <div class="box">縦横:200px x 200px</div>
-        <div class="box">縦横:200px x 200px</div>
-        <div class="box-bottom">縦横:200px x 200px</div>
-        <div class="box-bottom">縦横:200px x 200px</div>
-        <div class="box-bottom">縦横:200px x 200px</div>     
-        </div>
-    </div>
+    ここに記載
   </body>
 </html>
 
