--- a/kadai1/text.html
+++ b/kadai1/text.html
@@ -6,7 +6,27 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    ここに記載
+    <div class="header">
+      山田太郎
+    </div>
+    <div class="main">
+      <div class="sidebar">
+        <div>サイドバーA</div>
+        <div>サイドバーB</div>
+        <div>サイドバーC</div>
+        <div>サイドバーD</div>
+      </div>
+      <div class="content">
+        <div class="box">
+          <div class="box-child"></div>
+          <div class="box-child"></div>
+          <div class="box-child"></div>
+          <div class="box-child"></div>
+          <div class="box-child"></div>
+          <div class="box-child"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
